# fastapi-ca-mac

./: .env  alembic.ini  config.py  containers.py  context_vars.py  main.py  middlewares.py  pyproject.toml
common/: auth.py  logger.py  messaging.py
example/ch06_02/: sync_ex.py
example/ch08_03/: env_ex.py
example/ch10_01/: background_task.py
example/ch10_02/: celery_result.py
example/ch11_01/: context_sample.py  context_test.py  middleware.py
migrations/versions/: 2024_06_11_1339-c274faefa508_add_user_table.py  2024_06_13_1241-e16c5c765a86_user_add_memo.py  2024_06_17_1746-74f45cdc585e_add_note_tag.py
note/application/: note_service.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controllers/: note_controller.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py  user_service_test.py
user/domain/: user_test.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py  user_repo_test.py
user/interface/controllers/: user_controller.py  user_controller_test.py
utils/: crypto.py
